--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ html {
   width: 100%;
 }
 
-
 .wrapper {
   display: flex;
 }
@@ -126,12 +125,12 @@ a {
   display: flex;
 }
 
-.p {
-  padding-left: 4%;
+.heading {
+  padding-left: 4.1%;
 }
 
-.name,
-.colors {
+.grp_name,
+.magic_colors {
   padding-left: 6%;
 }
 
@@ -176,6 +175,7 @@ a {
 .main_group > div > button:hover {
   cursor: pointer;
   opacity: 0.7;
+  filter: drop-shadow( 5px 5px 5px rgb(40, 40, 40));
 }
 
 .btn_section {
@@ -184,24 +184,24 @@ a {
 }
 
 @media screen and (max-width: 500px) {
+  .main_group > div > .div {
+    height: 1.6rem;
+    width: 1.6rem;
+  }
+
   .main_group {
-    height: 17rem;
-    width: 97%;
+    height: 16.5rem;
+    width: 96.3%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
   }
 
-  .main_group > div > .div {
-    height: 1.5rem;
-    width: 1.5rem;
-  }
-
   .main_group > div > button {
-    width: 17rem;
-    height: 3rem;
+    width: 16rem;
+    height: 3.11rem;
     right: 0%;
-    font-size: 1.5rem;
+    font-size: 1.44rem;
   }
 
   .main_group > div {
@@ -209,9 +209,9 @@ a {
     justify-content: center;
   }
 
-  .p,
-  .name,
-  .colors {
-    padding-left: 3%;
+  .heading,
+  .grp_name,
+  .magic_colors {
+    padding-left: 3.1%;
   }
 }
