--- a/src/styles/WriteArea.module.css
+++ b/src/styles/WriteArea.module.css
@@ -1,33 +1,35 @@
-.container {
+.wrapper {
   width: 100%;
   height: 97%;
   height: 97vh;
 }
 
-.container > header {
+.wrapper > header {
   background-color: #e8e8e8;
   display: flex;
   align-items: center;
   height: 10.5%;
 }
 
-.container > header > img {
+.wrapper > header > img {
   margin: 0% 2%;
   height: 0.9rem;
   display: none;
+  transition: transform 0.3s ease;
 }
 
-.container > header > img:hover {
+.wrapper > header > img:hover {
   cursor: pointer;
+  transform: scale(1.2);
 }
 
-.container > main {
+.wrapper > main {
   background-color: #f7ecdc;
   height: 60%;
   overflow-y: auto;
 }
 
-.container > footer {
+.wrapper > footer {
   background-color: #e8e8e8;
   height: 30%;
   padding: 1.3%;
@@ -35,18 +37,18 @@
   position: relative;
 }
 
-.container > footer > img {
+.wrapper > footer > img {
   position: absolute;
   right: 3%;
   bottom: 15%;
   height: 1.5rem;
 }
-.container > footer > img:hover {
+.wrapper > footer > img:hover {
   cursor: pointer;
   filter: drop-shadow(0px 0px 3px rgb(76, 246, 76));
 }
 
-.container > footer > textarea {
+.wrapper > footer > textarea {
   height: 100%;
   width: 100%;
   font-family: roboto;
@@ -61,16 +63,16 @@
 }
 
 @media screen and (max-width: 500px) {
-  .container > header > img {
+  .wrapper > header > img {
     display: block;
     margin-left: 5%;
   }
 
-  .container > main {
+  .wrapper > main {
     height: 72.5%;
   }
 
-  .container > footer {
+  .wrapper > footer {
     height: 20%;
   }
 }
